changes to contact data

--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
 				<div class="col-lg-12 left">
 					<h3>Kontakt</h3>
 					<p>Andre Steingress</p>
-					<p><span class="icon icon-mobile"></span> +43 676 9 211 322 <br/>
-					   <span class="icon icon-envelop"></span> <a href="#"> office@newify.at</a> <br/>
+					<p><span class="icon icon-mobile"></span> <br/>
+					   <span class="icon icon-envelop"></span> <a href="#"> </a> <br/>
 					</p>
 				</div><!-- col -->
 				
