small text changes

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<div class="col-lg-4 callout">
 					<span class="icon icon-stack"></span>
 					<h2>Migration</h2>
-					<p>Technische Durchführung der Migration von Informationssystemen</p>
+					<p>Technische Begleitung bei der Migration von Informationssystemen</p>
 				</div><!-- col-lg-4 -->
 				
 				<div class="col-lg-4 callout">
@@ -110,9 +110,9 @@
 				</div><!-- col-lg-6 -->
 				
 				<div class="col-lg-6">
-					<p>Wir haben uns auf <b>Software Wartung und die Migration von bestehenden Informationssystemen</b> spezialisiert. Wir begleiten unsere Kunden bei der Erstellung von technischer Dokumentation, technische Analyse des Ist-Zustands, sowie den einzelnen Migrations- und Implementierungsschritten ausgelöst durch neue Technologien oder geänderte Anforderungen. </p>
+					<p>Wir haben uns auf <b>Software Wartung und die Migration von bestehenden Informationssystemen</b> spezialisiert. Wir begleiten unsere Kunden bei der Erstellung von technischer Dokumentation, der technischen Analyse der Ist-Situation, sowie den einzelnen Migrations- und Implementierungsschritten, ausgelöst durch neue Technologien oder geänderte Anforderungen. </p>
 
-					<p>Mit Hilfe von speziell entwickelten Prozesswerkzeugen und technischen Werkzeugen werden typische Migrations- oder Wartungsprozesse vom ersten bis zum letzten Schritt implementiert.  
+					<p>Mit Hilfe von speziell entwickelten Prozesswerkzeugen und technischen Werkzeugen werden typische Migrations- oder Wartungsprozesse vom ersten bis zum letzten Schritt gemeinsam mit dem Kunden implementiert.  
 					</p>
 				</div><!-- col-lg-6 -->
 			</div><!-- row -->
