--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 				<hr>
 				<div class="col-lg-offset-3 col-lg-6 left">
 					<p>Haben Sie Fragen? Wir freuen uns auf ein unverbindliches Gespräch!</p>
-					<p>CEO DI Andre Steingress</p>
+					<p>Andre Steingress</p>
 					<p><span class="icon icon-mobile"></span> (AT) 676 9211 322 <br/>
 					   <span class="icon icon-envelop"></span> 
 						<script type="text/javascript">
